# aprilcam

./: .aprilcam  .env.example  .gitattributes  .gitignore  .mcp.json  README.md  camera_setup.sh  pyproject.toml  test_detect.py
.clasi/: .clasi.db
.clasi/architecture/: architecture-update-001.md  architecture-update-002.md  architecture-update-005.md  architecture-update-007.md  architecture-update-008.md
.clasi/issues/: aprilcam-daemon-architecture.md  aprilcam-daemon-protocol-specification.md  plan-add-text-rect-and-polygon-overlay-element-types.md  plan-aprilcam-view-positional-argument-tkinter-gui.md  plan-live-overlay-via-tag-stream-socket.md  plan-object-detection-jupyter-notebook-lab.md  playfield-auto-discover-homography-broken.md
.claude/: settings.json
config/: dotconfig.yaml
contrib/playfield/: README.md  playfield_sim.py
data/aprilcam/: playfield.json  tags.json
docs/: daemon-interface.md  lighting-and-detection.md  robot-direct-api.md
docs/clasi/: .clasi.db  overview.md
proto/: aprilcam.proto
scripts/: compile_proto.py
src/aprilcam/: AGENT_GUIDE.md  ROBOT_API_GUIDE.md  __init__.py  aprilcam.py  camutil.py  color_classifier.py  composite.py  config.py  detection.py  display.py  errors.py  frame.py  homography.py  image_processing.py  iohelpers.py  liveview.py  mcp_server.py  models.py  objects.py  playfield.py  screencap.py  stream.py  taggen.py  web_server.py
testdev/: detect_pipeline.py  detect_test.py
tests/: bench_objects.py  bench_tags.py  conftest.py  demo_overlay.py  test_calibration_parallax.py  test_camera_errors.py  test_cli_smoke.py  test_client_models.py  test_color_classifier.py  test_composite.py  test_composite_integration.py  test_config_loader.py  test_daemon_backpressure.py  test_daemon_cli.py  test_daemon_control.py  test_daemon_protocol.py  test_daemon_server.py  test_daemon_spawn_race.py  test_daemon_stream.py  test_detect_objects_integration.py  test_detection.py  test_display_overlay.py  test_draw_paths.py  test_fusion.py  test_grpc_reflection.py  test_grpc_servicer.py  test_grpc_smoke.py  test_homography.py  test_homography_persistence.py  test_image_processing.py  test_init_cli.py  test_live_view_ipc.py  test_mcp_composite.py  test_mcp_detection.py  test_mcp_frame.py  test_mcp_image_tools.py  test_mcp_path_tools.py  test_mcp_playfield.py  test_mcp_process_frame.py  test_mcp_server.py  (+15 more)
tests/movies/: bright-gsc.mov  bright-ov9782.mov  dim-gsc.mov  dim-ov9782.mov
tests/object_detection/: 01_explore.ipynb  01_explore_out.ipynb  02_detector.ipynb  02_detector_out.ipynb  capture.py  consensus.json  ground_truth.json  hsv_summary.csv  test_lab.py
tests/smoke/: test_construction.py  test_imports.py
tests/system/: test_e2e_frame_pipeline.py  test_mcp_subprocess.py  test_video_pipeline.py
tests/unit/: test_frame.py  test_models.py  test_optical_flow_tracker.py  (+7 more)
(+516 files in other folders)
