[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aprilcam"
version = "0.20260323.3"
description = "CLI to list cameras and detect AprilTags from a USB video stream using OpenCV"
authors = [
  { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["opencv", "apriltag", "camera", "computer-vision"]

# opencv-contrib-python includes the aruco module with AprilTag dictionaries
# numpy is an implicit dependency but we declare it explicitly
# On Apple Silicon, wheels are available for these packages.
dependencies = [
  "opencv-contrib-python>=4.8",
  "numpy>=1.23",
  "python-dotenv>=1.0",
  "mss>=9.0", # for --screen desktop capture on macOS/Windows/Linux
  "mcp>=1.0",
]

[project.scripts]
aprilcam = "aprilcam.cli:main"
aprilcam-mcp = "aprilcam.mcp_server:main"

[project.optional-dependencies]
playfield = ["pygame>=2.5"]

[tool.uv]
# uv works with standard pyproject; this section is optional and can hold uv-specific settings later.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]
